--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,12 +1,13 @@
 
 CC = gcc 
-FILES = ../src/*.c ../src/io/*.c 
+CFLAGS = -Wsign-conversion -Wsign-compare 
+FILES = ../src/*.c ../src/io/*.c ../src/statistics/*.c 
 
 all: dm_dspin.o 
 .PHONY: clean 
 
 %.o: %.c 
-	$(CC) $(FILES) $< -o $@ 
+	$(CC) $(CFLAGS) $(FILES) $< -o $@ 
 
 clean: 
 	rm -f *.o 
