--- a/src/statistics/Makefile
+++ b/src/statistics/Makefile
@@ -2,16 +2,12 @@
 CC = gcc 
 CFLAGS = -c -fPIC -Wsign-conversion -Wsign-compare 
 
-all: subs catalogue.o halo.o  
-.PHONY: clean subs 
+all: utils.o 
+.PHONY: clean 
 
 %.o: %.c *.h 
 	$(CC) $(CFLAGS) $< -o $@ 
 
-subs: 
-	$(MAKE) -C io/ 
-
 clean: 
 	rm -f *.o 
-	$(MAKE) -C io/ clean 
 
